# django-book-store

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  entrypoint.sh  eslint.config.js  eslint.config.mjs  manage.py  package-lock.json  package.json  prettier.config.js  prettier.config.mjs  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  tailwind.config.mjs
app/: settings.py  urls.py
docs/: GUIDE.md
store/: apps.py  metadata.py  request.py  urls.py  utils.py
store/admin/: __init__.py  addresses.py  authors.py  carts.py  genres.py  orders.py  payments.py  products.py  publishers.py  tags.py
store/context_processors/: __init__.py  account.py  core.py
store/core/: _get_frame.py  metadata.py  routers.py  views.py
store/forms/: __init__.py  account.py  addresses.py  auth.py  orders.py
store/migrations/: 0001_initial.py
store/models/: __init__.py  addresses.py  authors.py  base_model.py  carts.py  genres.py  orders.py  payments.py  products.py  publishers.py  tags.py  user.py
store/routes/store/: page.html  page.py
store/routes/store/(auth)/: layout.html
store/routes/store/(auth)/forgot-password/: page.html  page.py
store/routes/store/(auth)/login/: page.html  page.py
store/routes/store/(auth)/register/: page.html  page.py
store/routes/store/_components/: search.html
store/routes/store/account/: layout.html  page.html  page.py
store/routes/store/account/_components/: edit-account.html  nav.html
store/routes/store/account/address/: page.html  page.py
store/routes/store/account/address/[address_id]/: page.html  page.py
store/routes/store/account/address/_components/: add-address.html  form-address.html
store/routes/store/account/order/: page.html  page.py
store/routes/store/account/order/[order_id]/: page.html  page.py
store/routes/store/account/order/[order_id]/payment/: page.html  page.py
store/routes/store/author/[author_id]/: page.html  page.py
store/routes/store/cart/: page.html  page.py
store/routes/store/cart/checkout/: page.html  page.py
store/routes/store/cart/checkout/_components/: left.html  right.html
store/routes/store/genre/[genre_id]/: page.html  page.py
store/routes/store/privacy-policy/: page.html  page.py
store/routes/store/product/[slug]/: page.html  page.py
store/routes/store/publisher/[publisher_id]/: page.html  page.py
store/routes/store/tag/[tag_id]/: page.html  page.py
store/static/store/css/: style.css
store/static/store/js/: address.js  cart.js  login.js  product-detail.js  search-box.js  search-page.js
store/templates/store/: layout.html
store/templates/store/components/: footer.html  navbar.html
store/templates/store/ui/: button-light.html  button.html  product-card.html  text-field.html
store/templatetags/: store.py
store/utils/: carts.py
store/views/: __init__.py  addresses.py  auth.py  carts.py  orders.py  payments.py  user.py
user/: admin.py  apps.py  models.py
user/migrations/: 0001_initial.py
