[project]
name = "aquarius-book-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django==5.1.7",
  "django-browser-reload==1.18.0",
  "django-compressor==4.5.1",
  "django-environ==0.12.0",
  "django-stubs-ext==5.1.3", # for django ImageField
  "psycopg[binary]==3.2.5",
]

[dependency-groups]
dev = [
  "mypy==1.15.0",
  "ruff==0.9.9",
  "django-types==0.20.0",
]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = [
  ".venv",
  ".vscode",
  "dist",
  "media",
  "static",
  "node_modules",
  "migrations",
]

[[tool.mypy.overrides]]
module = "environ.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "dist",
  "media",
  "static",
  "node_modules",
  "migrations",
]

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
preview = true
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade,
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "TC", # flake8-type-checking
  "FA", # flake8-future-annotations
  "DJ", # flake8-django

  "PGH",  # pygrep-hooks
  "PL",   # pylint
  "TRY",  # tryceratops
  "PERF", # perflint
  "FURB", # refurb

  "RUF", # ruff-specific rules
]
ignore = [
  "PLR6301", # no-self-use
  "PLR2004", # magic-value-comparison
  "TRY003",  # raise-vanilla-args
  # noqa: PLR0911
]

[tool.ruff.lint.isort]
known-first-party = ["app", "user"]
known-local-folder = ["store"]
combine-as-imports = true

[tool.ruff.lint.pyflakes]
extend-generics = [
  "django.db.models.ForeignKey",
  "django.db.models.OneToOneField",
  "django.contrib.admin.ModelAdmin",
]
